unpackaged/main/default/objects/ETST_School__c/ETST_School__c.object-meta.xml
<CustomObject>
    <label>School</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>