unpackaged/main/default/objects/ETST_School__c/fields/Area_Based__c.field-meta.xml
<CustomField>
    <fullName>Area_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Area Based</label>
    <type>Checkbox</type>
</CustomField>