unpackaged/main/default/objects/ETST_School__c/fields/ET_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ET Vehicle Master</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Schools</relationshipLabel>
    <relationshipName>Schools</relationshipName>
    <type>Lookup</type>
</CustomField>