unpackaged/main/default/objects/ETST_School__c/fields/ETST_Calendar__c.field-meta.xml
<CustomField>
    <fullName>ETST_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar</label>
    <referenceTo>ETST_Calendar__c</referenceTo>
    <relationshipLabel>Schools</relationshipLabel>
    <relationshipName>Schools</relationshipName>
    <type>Lookup</type>
</CustomField>