unpackaged/main/default/objects/ETST_School__c/fields/ETST_Grade__c.field-meta.xml
<CustomField>
    <fullName>ETST_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>