unpackaged/main/default/objects/ETST_School__c/fields/ETST_School_Code__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Code__c</fullName>
    <formula>Customer__r.ETST_SchoolRefID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Code</label>
    <type>Text</type>
</CustomField>