unpackaged/main/default/objects/ETST_School__c/fields/ETST_School_Name_City__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Name_City__c</fullName>
    <formula>Name+&quot; - &quot;+Customer__r.BillingCity+&quot; - &quot;+ Customer__r.ETST_SchoolRefID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Name &amp; City</label>
    <type>Text</type>
</CustomField>