unpackaged/main/default/objects/ETST_School__c/fields/ETST_School_Paid__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Paid__c</fullName>
    <label>School Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>