unpackaged/main/default/objects/ETST_School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETST_Calendar__c</columns>
    <columns>ETST_Sales_Agreement__c</columns>
    <columns>ETST_School_Paid__c</columns>
    <columns>ETST_Account_Type__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>